welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: not found: value i
	for (i <- (i + 5) % getMondeHauteur to getMondeHauteur() - 1 + (i + 5) % getMondeHauteur) {
                   ^